add placeholders and documentation

--- a/SNM/index.html
+++ b/SNM/index.html
@@ -56,11 +56,13 @@
                 <div class="container" >
                   <h4>TOP 50 Italia</h4>
                   <div class="row" id="top">
-                      <!--Placeholders cards while loading
-                                            <script>printCardPlaceholder("top")</script>
-                      <script>printCardPlaceholder("top")</script>
-                      -->
-
+                      <!--Placeholders cards while loading -->
+                      <script>
+                        printCardPlaceholder("top")
+                        printCardPlaceholder("top")
+                        printCardPlaceholder("top")
+                        printCardPlaceholder("top")
+                      </script>
                   </div>
                       <div id="top-template" class="visually-hidden card col-3">
                           <img class="card-img-top"/>
