--- a/SNM/index.html
+++ b/SNM/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-3 text-center" id="left_menu">
+            <div class="col-12 col-lg-2 col-sm-12 col-xs-12 text-center" id="left_menu">
               <script>printNavBar("left_menu")</script> 
             </div>
             <div class="col" id="home">
@@ -55,7 +55,7 @@
 
                 <div class="container" >
                   <h4>TOP 50 Italia</h4>
-                  <div class="row" id="top">
+                  <div class="row justify-content-center" id="top">
                       <!--Placeholders cards while loading -->
                       <script>
                         printCardPlaceholder("top")
@@ -64,7 +64,7 @@
                         printCardPlaceholder("top")
                       </script>
                   </div>
-                      <div id="top-template" class="visually-hidden card col-3">
+                      <div id="top-template" class="visually-hidden card col-lg-2 col-md-3 col-sm-6">
                           <img class="card-img-top"/>
                           <div class="card-body">
                               <h5 class="card-title ">
