--- a/SNM/index.html
+++ b/SNM/index.html
@@ -64,7 +64,7 @@
                         printCardPlaceholder("top")
                       </script>
                   </div>
-                      <div id="top-template" class="visually-hidden card col-lg-2 col-md-3 col-sm-6">
+                      <div id="top-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
                           <img class="card-img-top"/>
                           <div class="card-body">
                               <h5 class="card-title ">
