--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
-    <script src="lib.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <script src="../lib.js"></script>
 </head>
 <body>
     <div class="container" >
