--- a/SNM/asset/src/track.html
+++ b/SNM/asset/src/track.html
@@ -16,7 +16,23 @@
             </div>
 
             <div class="col" id="home">
-
+                <div class="" id="infoTrack">
+                    <script>
+                        id = window.location.href.split("?")[1]
+                        printTrackInfo(id, "infoTrack")
+                    </script>
+                </div>
+                <div id="topTrackArtist">
+                    <h4>Top Tracks dell'artista</h4>
+                    <div class="row justify-content-center" id="top">
+                        <!--Placeholders cards while loading -->
+                        <script>
+                          for(let i=0;i<5;i++){
+                            printCardPlaceholder("top")
+                          }
+                        </script>
+                      </div>
+                </div>
             </div>
         </div>
     </div>
