--- a/SNM/asset/src/track.html
+++ b/SNM/asset/src/track.html
@@ -32,6 +32,16 @@
                           }
                         </script>
                       </div>
+                      <div id="topTrackArtist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+                        <img class="card-img-topTrackArtist"/>
+                        <div class="card-body">
+                          <h5 class="card-title ">
+                            <span class="nome_traccia col-6"></span>
+                          </h5>
+                          <span class="nome_artista"><span><br>
+                          <a class="btn btn-primary">+</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
