--- a/SNM/asset/src/track.html
+++ b/SNM/asset/src/track.html
@@ -37,8 +37,7 @@
                           <h5 class="card-title ">
                             <span class="nome_traccia col-6"></span>
                           </h5>
-                          <span class="nome_artista"><span><br>
-                          <a class="btn btn-primary">+</a>
+                          <div class="nome_artista"></div><br>
                         </div>
                     </div>
                 </div>
