--- a/SNM/asset/src/album.html
+++ b/SNM/asset/src/album.html
@@ -23,21 +23,13 @@
                     </script>
                 </div>
                 <div id="albumTrack">
-                    <div class="row justify-content-center" id="album">
+                    <div class="row justify-content-center" id="albumPlaceholder">
                         <!--Placeholders cards while loading -->
                         <script>
                           for(let i=0;i<5;i++){
-                            printCardPlaceholder("album")
+                            printCardPlaceholder("albumPlaceholder")
                           }
                         </script>
-                      </div>
-                      <div id="track-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-                        <div class="card-body">
-                          <h5 class="card-title ">
-                            <span class="nome_traccia col-6"></span>
-                          </h5>
-                          <div class="nome_artista"></div><br>
-                        </div>
                     </div>
                 </div>
             </div>
