--- a/SNM/index.html
+++ b/SNM/index.html
@@ -68,7 +68,7 @@
             
             <!--Template used for the tracks-->
             <div id="top-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-              <img class="card-img-top"/>
+              <img class="card-img"/>
               <div class="card-body">
                 <h5 class="card-title ">
                   <span class="nome_traccia col-6"></span>
