--- a/SNM/asset/src/track.html
+++ b/SNM/asset/src/track.html
@@ -32,7 +32,7 @@
                         </script>
                       </div>
                       <div id="topTrackArtist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-                        <img class="card-img-topTrackArtist"/>
+                        <img class="card-img"/>
                         <div class="card-body">
                           <h5 class="card-title ">
                             <span class="nome_traccia col-6"></span>
