--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -19,7 +19,7 @@
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email">
+            <input type="email" class="form-control" id="email" autocomplete="off">
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
