--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -41,6 +41,7 @@
           </div>
           <button class="btn btn-primary" onclick="login()">Submit</button>
         </div>
+        <a href="/" class="text-center"><h3>Torna alla home</h3></a>
       </div>
     </div>    
 </body>
