--- a/SNM/asset/src/playlist.html
+++ b/SNM/asset/src/playlist.html
@@ -11,11 +11,19 @@
 <body>
     <script>if(!logged()){window.location.href = "/"}</script>
     <div class="container">
-        <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-            <script>printNavBar("left_menu")</script> 
-        </div>
-
-        <div class="col" id="home">
+        <div class="row">
+            <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
+                <script>printNavBar("left_menu")</script> 
+            </div>
+    
+            <div class="col" id="home">
+                <div id="myPlaylists">
+                    <script>printMyPlaylists("myPlaylists")</script>
+                </div>
+                <div id="followedPlaylists">
+                    <h4>Le playlist che segui</h4>
+                </div>
+            </div>
         </div>
     </div>
 </body>
