--- a/SNM/asset/src/newplaylist.html
+++ b/SNM/asset/src/newplaylist.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <script>if(!logged()){window.location.href = "/"}</script>
-    <div class="container">
+    <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
                 <script>printNavBar("left_menu")</script> 
