--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -9,7 +9,7 @@
     <script src="../lib.js"></script>
 </head>
 <body>
-    <div class="container" >
+    <div class="container external-container" >
       <div class="row" id="userForm">
         <div class="col-5" id="signin">
           <h4>Crea un nuovo account</h4>
