--- a/SNM/asset/src/track.html
+++ b/SNM/asset/src/track.html
@@ -9,7 +9,7 @@
     <script src="../lib.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
               <script>printNavBar("left_menu")</script> 
