--- a/SNM/asset/src/artist.html
+++ b/SNM/asset/src/artist.html
@@ -20,6 +20,8 @@
                     <script>
                         id = window.location.href.split("?")[1]
                         printArtistInfo(id, "infoArtist")
+                        printTopTrackArtist(id)
+                        printAlbumArtist(id)
                     </script>
                 </div>
                 <div id="topTrackArtist">
