add track search

--- a/SNM/asset/src/track.html
+++ b/SNM/asset/src/track.html
@@ -19,7 +19,7 @@
                 <div class="" id="infoTrack">
                     <script>
                         id = window.location.href.split("?")[1]
-                        printTrackInfo(id, "infoTrack")
+                        printTrackInfo(id, "infoTrack", "topTrackArtist-template")
                     </script>
                 </div>
                 <div id="topTrackArtist">
