--- a/SNM/asset/src/artist.html
+++ b/SNM/asset/src/artist.html
@@ -45,7 +45,7 @@
                 </div>
                 <div id="album" >
                         <div id="album-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-                            <img class="card-img-album"/>
+                            <img class="card-img"/>
                             <div class="card-body">
                               <h5 class="card-title ">
                                 <span class="nome_album col-6"></span>
