--- a/SNM/index.html
+++ b/SNM/index.html
@@ -93,17 +93,25 @@
             </div>
           </div>
 
-          <div class="row justify-content-center" id="artistAlbum">
-            <div id="album-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-                <img class="card-img-album"/>
+          <div id="album-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+                <img class="card-img"/>
                 <div class="card-body">
                   <h5 class="card-title ">
                     <span class="nome_album col-6"></span>
                   </h5>
                   <div class="nome_artista"></div><br>
                 </div>
+          </div>
+
+          <div id="artist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+            <img class="card-img"/>
+            <div class="card-body">
+              <h5 class="card-title ">
+                <span class="nome_artista col-6"></span>
+              </h5>
+              <div class="follower"></div><br>
             </div>
-        </div>
+          </div>
         </div>
         <script>printTopCharts()</script>
       </div>
