--- a/SNM/asset/src/infoplaylist.html
+++ b/SNM/asset/src/infoplaylist.html
@@ -17,12 +17,23 @@
             </div>
     
             <div class="col" id="home">
-                <div id="playlist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-                    <img class="card-img" src="../img/music.jpg"/>
-                    <div class="card-body">
-                      <h5 class="card-title ">
-                        <span class="nome_playlist col-6"></span>
-                      </h5>
+                <div class="" id="infoPlaylist">
+                    <script>
+                        id = window.location.href.split("?")[1]
+                        printPlaylistInfo(id, "infoPlaylist", "trackPlaylist-template")
+                    </script>
+                </div>
+                <div id="trackPlaylist">
+                    <div class="row justify-content-center" id="top">
+                        <!--Placeholders cards while loading -->
+                        <script>
+                          for(let i=0;i<5;i++){
+                            printCardPlaceholder("top")
+                          }
+                        </script>
+                    </div>
+                    <div id="trackPlaylist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+
                     </div>
                 </div>
             </div>
