--- a/SNM/asset/src/playlist.html
+++ b/SNM/asset/src/playlist.html
@@ -31,6 +31,10 @@
                 <div id="followedPlaylists">
                     <h4>Le playlist che segui</h4>
                 </div>
+                <div id="publicPlaylists">
+                    <h4>Esplora le playlist pubbliche</h4>
+                    <script>printPublicPlaylists()</script>
+                </div>
             </div>
         </div>
     </div>
