--- a/SNM/asset/src/account.html
+++ b/SNM/asset/src/account.html
@@ -11,11 +11,37 @@
 <body>
     <script>if(!logged()){window.location.href = "/"}</script>
     <div class="container external-container">
-        <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-            <script>printNavBar("left_menu")</script> 
-        </div>
-
-        <div class="col" id="home">
+        <div class="row">
+            <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
+                <script>printNavBar("left_menu")</script> 
+            </div>
+    
+            <div class="col" id="home">
+                <div>
+                    <h4>Modifica i dati del tuo account</h4>
+                    <div style="margin:20px 0; margin-left: 10px;">
+                        <div class="mb-3 form-check">
+                            <li for="mail" class="form-label">La tua mail</li>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <li for="nickname" class="form-label">Il tuo nickname</li>
+                            <input type="text" class="form-control" id="nickname">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <li for="user" class="form-label">Nuova password</li>
+                            <input type="password" class="form-control" id="password">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="changePassword">
+                            <label class="form-check-label" for="exampleCheck1">Spunta per cambiare la password</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary" onclick="cambiaCredenziali()" style="width: 100%;margin-top: 20px;">Modifica i tuoi dati</button>
+                        <button type="submit" class="btn btn-danger" onclick="" style="width: 100%;margin-top: 20px;">Cancella il tuo account</button>
+                    </div>
+                </div>
+            </div>
+            <script>loadAccount()</script>
         </div>
     </div>
 </body>
