--- a/SNM/asset/src/account.html
+++ b/SNM/asset/src/account.html
@@ -6,14 +6,18 @@
     <title>SNM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <script src="../lib.js"></script>
 </head>
 <body>
-    <script>if(!logged()){window.location.href = "/"}</script>
+    <script type="module">
+        import {logged, loadAccount, cambiaCredenziali, printNavBar} from  "../lib.js";
+        if(!logged()){window.location.href = "/"}
+        printNavBar("left_menu")
+        loadAccount()
+        document.getElementById("buttonModify").addEventListener("click", cambiaCredenziali)
+    </script>
     <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-                <script>printNavBar("left_menu")</script> 
             </div>
     
             <div class="col" id="home">
@@ -36,12 +40,11 @@
                             <input type="checkbox" class="form-check-input" id="changePassword">
                             <label class="form-check-label" for="exampleCheck1">Spunta per cambiare la password</label>
                         </div>
-                        <button type="submit" class="btn btn-primary" onclick="cambiaCredenziali()" style="width: 100%;margin-top: 20px;">Modifica i tuoi dati</button>
+                        <button type="submit" class="btn btn-primary" id="buttonModify" style="width: 100%;margin-top: 20px;">Modifica i tuoi dati</button>
                         <button type="submit" class="btn btn-danger" onclick="" style="width: 100%;margin-top: 20px;">Cancella il tuo account</button>
                     </div>
                 </div>
             </div>
-            <script>loadAccount()</script>
         </div>
     </div>
 </body>
