--- a/SNM/asset/src/album.html
+++ b/SNM/asset/src/album.html
@@ -6,30 +6,27 @@
     <title>SNM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <script src="../lib.js"></script>
 </head>
 <body>
     <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-              <script>printNavBar("left_menu")</script> 
+              <script>
+                import {printNavBar, printCardPlaceholder, printAlbumInfo} from "../lib.js";
+                printNavBar("left_menu")
+                for(let i=0;i<5;i++){
+                    printCardPlaceholder("albumPlaceholder")
+                }
+                id = window.location.href.split("?")[1]
+                printAlbumInfo(id, "infoAlbum")
+              </script> 
             </div>
 
             <div class="col" id="home">
                 <div class="" id="infoAlbum">
-                    <script>
-                        id = window.location.href.split("?")[1]
-                        printAlbumInfo(id, "infoAlbum")
-                    </script>
                 </div>
                 <div id="albumTrack">
                     <div class="row justify-content-center" id="albumPlaceholder">
-                        <!--Placeholders cards while loading -->
-                        <script>
-                          for(let i=0;i<5;i++){
-                            printCardPlaceholder("albumPlaceholder")
-                          }
-                        </script>
                     </div>
                 </div>
             </div>
