--- a/SNM/asset/src/infoplaylist.html
+++ b/SNM/asset/src/infoplaylist.html
@@ -9,31 +9,27 @@
     <script src="../lib.js"></script>
 </head>
 <body>
-    <script>if(!logged()){window.location.href = "/"}</script>
+    <script type="module">
+        import {logged, printNavBar, printPlaylistInfo, printCardPlaceholder} from  "../lib.js";
+        if(!logged()){window.location.href = "/"}
+        printNavBar("left_menu")
+        for(let i=0;i<5;i++){
+            printCardPlaceholder("top")
+        }
+        var id = window.location.href.split("?")[1]
+        printPlaylistInfo(id, "infoPlaylist", "trackPlaylist-template")
+    </script>
     <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-                <script>printNavBar("left_menu")</script> 
             </div>
     
             <div class="col" id="home">
                 <div class="" id="infoPlaylist">
-                    <script>
-                        id = window.location.href.split("?")[1]
-                        printPlaylistInfo(id, "infoPlaylist", "trackPlaylist-template")
-                    </script>
                 </div>
                 <div id="trackPlaylist">
                     <div class="row justify-content-center" id="top">
-                        <!--Placeholders cards while loading -->
-                        <script>
-                          for(let i=0;i<5;i++){
-                            printCardPlaceholder("top")
-                          }
-                        </script>
-                    </div>
                     <div id="trackPlaylist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-
                     </div>
                 </div>
             </div>
