--- a/SNM/asset/src/newplaylist.html
+++ b/SNM/asset/src/newplaylist.html
@@ -9,11 +9,14 @@
     <script src="../lib.js"></script>
 </head>
 <body>
-    <script>if(!logged()){window.location.href = "/"}</script>
+    <script type="module">
+        import {printNavBar, logged} from  "../lib.js";
+        if(!logged()){window.location.href = "/"}
+        printNavBar("left_menu")
+    </script>
     <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-                <script>printNavBar("left_menu")</script> 
             </div>
     
             <div class="col" id="home">
