--- a/SNM/asset/src/playlist.html
+++ b/SNM/asset/src/playlist.html
@@ -9,11 +9,16 @@
     <script src="../lib.js"></script>
 </head>
 <body>
-    <script>if(!logged()){window.location.href = "/"}</script>
+    <script type="module">
+        import {logged, printNavBar, printMyPlaylists, printPublicPlaylists} from  "../lib.js";
+        if(!logged()){window.location.href = "/"}
+        printNavBar("left_menu")
+        printMyPlaylists("myPlaylists", "playlist-template")
+        printPublicPlaylists()
+    </script>
     <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-                <script>printNavBar("left_menu")</script> 
             </div>
     
             <div class="col" id="home">
@@ -26,13 +31,11 @@
                     </div>
                 </div>
                 <div id="myPlaylists" class="container">
-                    <script>printMyPlaylists("myPlaylists", "playlist-template")</script>
                 </div>
                 <div id="followedPlaylists">
                     <h4>Le playlist che segui</h4>
                 </div>
                 <div id="publicPlaylists">
-                    <script>printPublicPlaylists()</script>
                 </div>
             </div>
         </div>
