--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -6,7 +6,11 @@
     <title>SNM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <script src="../lib.js"></script>
+    <script type="module">
+      import { addUser, login } from "../lib.js";
+      document.getElementById("buttonAddUser").addEventListener("click", addUser)
+      document.getElementById("buttonLogin").addEventListener("click", login)
+    </script>
 </head>
 <body>
     <div class="container external-container" >
@@ -25,7 +29,7 @@
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password">
           </div>
-          <button class="btn btn-primary" onclick=addUser()>Submit</button>
+          <button class="btn btn-primary" id="buttonAddUser">Submit</button>
         </div>
         <div class="col"></div>
         
@@ -39,7 +43,7 @@
             <label for="login_password" class="form-label">Password</label>
             <input type="password" class="form-control" id="login_password">
           </div>
-          <button class="btn btn-primary" onclick="login()">Submit</button>
+          <button class="btn btn-primary" id="buttonLogin">Submit</button>
         </div>
         <a href="/" class="text-center"><h3>Torna alla home</h3></a>
       </div>
