--- a/SNM/asset/src/newplaylist.html
+++ b/SNM/asset/src/newplaylist.html
@@ -6,14 +6,15 @@
     <title>SNM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <script src="../lib.js"></script>
-</head>
-<body>
     <script type="module">
-        import {printNavBar, logged} from  "../lib.js";
+        import {printNavBar, logged, addTag, addPlaylist} from  "../lib.js";
         if(!logged()){window.location.href = "/"}
         printNavBar("left_menu")
+        document.getElementById("buttonAddTag").addEventListener("click", addTag)
+        document.getElementById("buttonAddPlaylist").addEventListener("click", addPlaylist)
     </script>
+</head>
+<body>
     <div class="container external-container">
         <div class="row">
             <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
@@ -37,7 +38,7 @@
                                     <input type="text" class="form-control" id="tagInput" placeholder="Tag della playlist" autocomplete="off">
                                 </div>
                                 <div class="col">
-                                    <button class="btn btn-primary mb-3" style="width: 100%;" onclick=addTag()>Aggiungi tag</button>
+                                    <button class="btn btn-primary mb-3" style="width: 100%;" id="buttonAddTag">Aggiungi tag</button>
                                 </div>
                             </div>
                             <li for="tagList" class="form-label">Lista tag</li>
@@ -62,7 +63,7 @@
                                 </label>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary" onclick="addPlaylist()" style="width: 100%;margin-top: 20px;">Salva la playlist</button>
+                        <button type="submit" class="btn btn-primary" id="buttonAddPlaylist" style="width: 100%;margin-top: 20px;">Salva la playlist</button>
                     </div>
                 </div>
             </div>
