fix frontend and add playlist followed

--- a/SNM/index.html
+++ b/SNM/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNM</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <script type="module">
@@ -23,6 +24,7 @@
       <div class="row">
         <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
         </div>
+
         <div class="col justify-content-center" id="home">
           <div class="container">
             <div class="row justify-content-center">
@@ -54,19 +56,23 @@
             </div>
           </div>
           <div id="content">
-            <div>
-              <h4>Playlist</h4>
-              <div id="myPlaylists" class="container">
-                <script></script>
+              <div>
+                <h4>Playlist</h4>
+                <div class="container">
+                  <div id="myPlaylists" class="row justify-content-center">
+                  </div>
+                </div>
+                <div class="container">
+                  <div id="followedPlaylists" class="row justify-content-center">
+                  </div>
+                </div>
               </div>
-              <div class="container" id="followedPlaylists">
-                <h4>Le playlist che segui</h4>
-              </div>
-            </div>
 
-            <h4>TOP 50 Italia</h4>
-            <div class="container" id="top50">  
-              <div class="row justify-content-center" id="top">
+            <div>
+              <h4>TOP 50 Italia</h4>
+              <div class="container" id="top50">  
+                <div class="row justify-content-center" id="top">
+                </div>
               </div>
             </div>
           </div>  
