--- a/SNM/asset/src/playlist.html
+++ b/SNM/asset/src/playlist.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNM</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <script type="module">
-        import {logged, printNavBar, printMyPlaylists, printPublicPlaylists} from  "../lib.js";
+        import {logged, printNavBar, printMyPlaylists, printPublicPlaylists, printFollowedPlaylists} from  "../lib.js";
         if(!logged()){window.location.href = "/"}
         printNavBar("left_menu")
         printMyPlaylists("myPlaylists", "playlist-template")
+        printFollowedPlaylists()
         printPublicPlaylists()
     </script>
 </head>
@@ -21,21 +23,27 @@
             </div>
     
             <div class="col" id="home">
-                <div id="playlist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
-                    <img class="card-img" src="../img/music.jpg"/>
-                    <div class="card-body">
-                      <h5 class="card-title ">
-                        <span class="nome_playlist col-6"></span>
-                      </h5>
+                <h4>Playlist</h4>
+                <div class="container">
+                    <div id="myPlaylists"class="row">
                     </div>
                 </div>
-                <div id="myPlaylists" class="container">
+                <div class="container">
+                    <div id="followedPlaylists"class="row">
+                    </div>
                 </div>
-                <div id="followedPlaylists">
-                    <h4>Le playlist che segui</h4>
+                <div class="container">
+                    <div id="publicPlaylists"class="row">
+                    </div>
                 </div>
-                <div id="publicPlaylists">
-                </div>
+            </div>
+        </div>
+        <div id="playlist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+            <img class="card-img" src="../img/music.jpg"/>
+            <div class="card-body">
+              <h5 class="card-title ">
+                <span class="nome_playlist col-6"></span>
+              </h5>
             </div>
         </div>
     </div>
