add search by tag e various fixes

--- a/SNM/asset/src/infoplaylist.html
+++ b/SNM/asset/src/infoplaylist.html
@@ -15,7 +15,7 @@
             printCardPlaceholder("top")
         }
         var id = window.location.href.split("?")[1]
-        printPlaylistInfo(id, "infoPlaylist", "trackPlaylist-template")
+        printPlaylistInfo(id, "infoPlaylist")
     </script>
 </head>
 <body>
