--- a/SNM/asset/src/account.html
+++ b/SNM/asset/src/account.html
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <script type="module">
-        import {logged, loadAccount, cambiaCredenziali, printNavBar, deleteAccount, loadGenres} from  "../lib.js";
+        import {logged, loadAccount, cambiaCredenziali, printNavBar, deleteAccount, loadGenres, addTag} from  "../lib.js";
         if(!logged()){window.location.href = "/"}
         printNavBar("left_menu")
         loadAccount()
         loadGenres()
         document.getElementById("buttonModify").addEventListener("click", cambiaCredenziali)
         document.getElementById("buttonDelete").addEventListener("click", deleteAccount)
+        document.getElementById("addGenre").addEventListener("click", addTag)
     </script>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check-circle-fill" viewBox="0 0 16 16">
@@ -59,18 +60,18 @@
                                 Generi preferiti
                             </li>
                             <div class="container">
-                                <div class="row" id="tagList">
+                                <div class="row" id="tagList" style="margin: 10px 0;">
                                 </div>
                             </div>
                             <div class="mb-3 form-check">
                                 <div>Generi disponibili</div>
                                 <div class="row" style="margin-top: 10px;">
                                     <div class="col-6">
-                                        <select id="genres" class="form-select ">
+                                        <select id="tagInput" class="form-select ">
                                         </select>
                                     </div>
                                     <div class="col-6">
-                                        <button class="btn btn-primary" style="width: 100%;">
+                                        <button class="btn btn-primary" style="width: 100%;" id="addGenre">
                                             Aggiungi genere tra i preferiti
                                         </button>
                                     </div>
