--- a/SNM/index.html
+++ b/SNM/index.html
@@ -43,27 +43,27 @@
                     <input type="text" class="form-control" id="input"> 
                     <div class="row justify-content-center" id="searchParameters"> 
                       <div class="form-check form-switch col-10 col-md-5">
-                        <input class="form-check-input" type="checkbox" role="switch" id="track" checked>
+                        <input class="form-check-input switch" type="checkbox" role="switch" id="track" checked>
                         <label class="form-check-label" for="track">Canzone</label>
                       </div>
                       <div class="form-check form-switch col-10 col-md-5">
-                        <input class="form-check-input" type="checkbox" role="switch" id="artist">
+                        <input class="form-check-input switch" type="checkbox" role="switch" id="artist">
                         <label class="form-check-label" for="artist">Artista</label>
                       </div>
                       <div class="form-check form-switch col-10 col-md-5">
-                        <input class="form-check-input" type="checkbox" role="switch" id="album">
+                        <input class="form-check-input switch" type="checkbox" role="switch" id="album">
                         <label class="form-check-label" for="album">Album</label>
                       </div>
                       <div class="form-check form-switch col-10 col-md-5">
-                        <input class="form-check-input" type="checkbox" role="switch" id="playlist">
+                        <input class="form-check-input switch" type="checkbox" role="switch" id="playlist">
                         <label class="form-check-label" for="playlist">Playlist</label>
                       </div>
                       <div class="form-check form-switch col-10 col-md-5">
-                        <input class="form-check-input" type="checkbox" role="switch" id="tag">
+                        <input class="form-check-input switch" type="checkbox" role="switch" id="tag">
                         <label class="form-check-label" for="tag">Tag Playlist</label>
                       </div>
                       <div class="form-check form-switch col-10 col-md-5">
-                        <input class="form-check-input" type="checkbox" role="switch" id="all">
+                        <input class="form-check-input switch" type="checkbox" role="switch" id="all">
                         <label class="form-check-label" for="all">All</label>
                       </div>
                     </div>
