fix and add Playlist search by track name

--- a/SNM/asset/src/playlist.html
+++ b/SNM/asset/src/playlist.html
@@ -40,8 +40,8 @@
                                 <label class="form-check-label" for="tag">Tag Playlist</label>
                               </div>
                               <div class="form-check form-switch col-10 col-md-5">
-                                <input class="form-check-input switch" type="checkbox" role="switch" id="tag">
-                                <label class="form-check-label" for="tag">Titolo canzone</label>
+                                <input class="form-check-input switch" type="checkbox" role="switch" id="track">
+                                <label class="form-check-label" for="track">Titolo canzone</label>
                               </div>
                               <div class="form-check form-switch col-10 col-md-5">
                                 <input class="form-check-input switch" type="checkbox" role="switch" id="all">
