--- a/SNM/asset/src/newplaylist.html
+++ b/SNM/asset/src/newplaylist.html
@@ -38,11 +38,11 @@
                     <div style="margin:20px 0">
                         <div class="mb-3 form-check">
                             <li for="nome" class="form-label">Nome della playlist</li>
-                            <input type="text" class="form-control" id="nome" autocomplete="off">
+                            <input type="text" class="form-control" id="nome" autocomplete="off" placeholder="Aggiungi un nome per la tua nuova playlist">
                         </div>
                         <div class="mb-3 form-check">
                             <li for="descrizione" class="form-label">Descrizione</li>
-                            <textarea class="form-control" id="descrizione" rows="3"></textarea>
+                            <textarea class="form-control" id="descrizione" rows="3" placeholder="Aggiungi un'eventuale descrizione"></textarea>
                         </div>
                         <div class="mb-3 form-check">
                             <div class="row ">
